fixed align
it's properly centered now

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     width: 1920px;
+    margin: 0 auto;
 }
 
 body {
